fix sort item width on mobile

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -241,16 +241,18 @@ pre {
     margin-left: 6%;
     width: 29.333333333333332%;
     &.first { margin-left: 0; }
-
-    @include media-query-max($on-mobile) {
-        width: 100%;
-        margin-left: 0;
-        margin-bottom: 20px;
-    }
 }
 .no_margin.col-one-third {
     margin-left: 0;
     width: 33.3%;
+}
+
+.flex_column {
+  @include media-query-max($on-mobile) {
+    width: 100% !important;
+    margin-left: 0 !important;
+    margin-bottom: 20px;
+  }
 }
 
 .col-one-half { width: 50%; }
